# Django_ORM

./: django_queryset_options.py  pyproject.toml  readme.md  requirements.txt
base/: models.py  views.py
base/management/commands/: setup_test_data.py
base/templatetags/: tags.py
config/: settings.py  urls.py  views.py
templates/: home.html  orm_view.html
